apps/guestbook/overlays/01_frontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook-frontend
spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
        - name: frontend
          #image: gcr.io/google-samples/gb-frontend:v6
          image: paulczar/gb-frontend:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      ServiceAccountName: guestbook-sa
