apps/guestbook/overlays/02_master_redis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook-redismaster
spec:
  selector:
    matchLabels:
      app: guestbook
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook
        role: master
        tier: backend
    spec:
      containers:
        - name: redis
          image: gcr.io/kubernetes-e2e-test-images/redis:"1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
