apps/guestbook/overlays/04_slave_redis.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook-redisslave
spec:
  selector:
    matchLabels:
      app: guestbook
      role: slave
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook
        role: slave
        tier: backend
    spec:
      containers:
      - name: redis-slave
        image: gcr.io/google_samples/gb-redisslave:v3
        imagePullPolicy: v3
        ports:
          - containerPort: 6379
