apps/guestbook/overlays/00_frontend_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: guestbook
    tier: frontend
