apps/guestbook/overlays/03_master_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-master
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: guestbook
    role: master
    tier: backend
