apps/guestbook/overlays/06_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: guestbook
  name: guestbook
spec:
  host: 
  port:
    targetPort: 9080
  subdomain: ""
  to:
    kind: Service
    name: guestbook
    weight: 100
  wildcardPolicy: None
